Revert changes to compiler regression tests